Document posts_limit

--- a/tack.1
+++ b/tack.1
@@ -221,6 +221,11 @@ metadata or YAML frontmatter:
 Overrides the name of the page which is usually derived automatically
 from the directory name.
 .TP
+\f[B]\f[CB]posts_limit\f[B]\f[R]
+For ordered or floating pages, this setting can be used to specify the
+number of \f[C]posts\f[R] to provide in the rendering context.
+By default, all posts would be listed.
+.TP
 \f[B]\f[CB]tags\f[B]\f[R]
 If the page is a post, you can specify a list of tags to assign to this
 page here.
