Clean manpage a bit more.

--- a/tack.1
+++ b/tack.1
@@ -14,7 +14,7 @@
 . ftr VB CB
 . ftr VBI CBI
 .\}
-.TH "TACK" "1" "January 2022" "" ""
+.TH "TACK" "1" "July 2022" "" ""
 .hy
 .SH NAME
 .PP
@@ -323,7 +323,7 @@ successful due to being unable to read or process any of the input files
 or if the \f[I]output\f[R] directory cannot be written to.
 .SH BUGS
 .PP
-To report bugs, please go to create a ticket at
+To report bugs, please create a ticket at
 https://github.com/roblillack/tack/issues
 .SH SEE ALSO
 .PP
